Update basic webpage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SoftwareCrafted - Expert insights on software development, testing, cybersecurity, AI, and tech news." />
-    <meta name="keywords" content="software development, software testing, cybersecurity, artificial intelligence, tech news, programming" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <title>SoftwareCrafted - Where Code Meets Craft</title>
+    <meta name="description" content="SoftwareCrafted — Expert insights on software development, testing, cybersecurity, AI, and tech news. In-depth articles for engineers." />
+    <meta name="keywords" content="software development, software testing, cybersecurity, artificial intelligence, tech news, programming, devops" />
+    <meta name="author" content="SoftwareCrafted" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://softwarecrafted.com/" />
+
+    <!-- OpenGraph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SoftwareCrafted" />
+    <meta property="og:title" content="SoftwareCrafted — Where Code Meets Craft" />
+    <meta property="og:description" content="Expert insights on software development, testing, cybersecurity, AI, and tech news." />
+    <meta property="og:url" content="https://softwarecrafted.com/" />
+    <meta property="og:image" content="https://softwarecrafted.com/favicon.svg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SoftwareCrafted — Where Code Meets Craft" />
+    <meta name="twitter:description" content="Expert insights on software development, testing, cybersecurity, AI, and tech news." />
+    <meta name="twitter:image" content="https://softwarecrafted.com/favicon.svg" />
+
+    <!-- Fonts: preload critical, defer rest -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+
+    <title>SoftwareCrafted — Where Code Meets Craft</title>
   </head>
   <body>
     <div id="root"></div>
