--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://softwarecrafted.com/" />
 
-    <!-- OpenGraph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SoftwareCrafted" />
     <meta property="og:title" content="SoftwareCrafted — Where Code Meets Craft" />
@@ -18,16 +17,15 @@
     <meta property="og:url" content="https://softwarecrafted.com/" />
     <meta property="og:image" content="https://softwarecrafted.com/favicon.svg" />
 
-    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SoftwareCrafted — Where Code Meets Craft" />
     <meta name="twitter:description" content="Expert insights on software development, testing, cybersecurity, AI, and tech news." />
     <meta name="twitter:image" content="https://softwarecrafted.com/favicon.svg" />
 
-    <!-- Fonts: preload critical, defer rest -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:wght@700;900&family=JetBrains+Mono:wght@400;500&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>SoftwareCrafted — Where Code Meets Craft</title>
   </head>
